custom authorize attribute implemented

--- a/OneCoreTest.Web/Views/Users/Index.cshtml
+++ b/OneCoreTest.Web/Views/Users/Index.cshtml
@@ -2,10 +2,10 @@
 @using OneCoreTest.Common.Enums
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Consulta de usuarios";
 }
 
-<h2>Consulta de usuario</h2>
+<h2>@ViewBag.Title</h2>
 
 <p>
     @Html.ActionLink("Alta de usuarios", "Create")
