--- a/OneCoreTest.Web/Views/Account/Login.cshtml
+++ b/OneCoreTest.Web/Views/Account/Login.cshtml
@@ -1,6 +1,8 @@
 ﻿@model OneCoreTest.Web.Models.LoginViewModel
-
-<h2>Login</h2>
+@{ 
+    ViewBag.Title = "Iniciar Sesión";
+}
+<h2>@ViewBag.Title</h2>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
